# hubcli

./: .gitignore  .npmignore  CLAUDE.md  README.md  README.zh-CN.md  package-lock.json  package.json
examples/: sample-er.md  sample-flowchart.md  sample.md  sample.xmind
packaging/python/: hubcli-worker.spec
packaging/windows/: build-release.ps1  hubcli.cmd  hubcli.iss
python/: pyproject.toml
python/hubcli_worker/: main.py  registry.py
python/hubcli_worker/commands/: arthas.py  md.py  minio.py  mqtt.py  mysql.py  nacos.py  rabbitmq.py  redis.py  rocketmq4.py  windows.py  xmind.py
python/hubcli_worker/tasks/: common.py  md_prepare.py  xmind_to_md.py
python/hubcli_worker/tasks/arthas/: boot.py  http_client.py  models.py  operations.py  runtime.py
python/hubcli_worker/tasks/minio/: client.py  config.py  models.py  operations.py
python/hubcli_worker/tasks/mqtt/: client.py  config.py  models.py  operations.py
python/hubcli_worker/tasks/mysql/: client.py  config.py  exporters.py  models.py  operations.py
python/hubcli_worker/tasks/nacos/: client.py  config.py  models.py  operations.py
python/hubcli_worker/tasks/rabbitmq/: amqp.py  config.py  management.py  models.py  operations.py
python/hubcli_worker/tasks/redis/: client.py  config.py  models.py  operations.py
python/hubcli_worker/tasks/rocketmq4/: client.py  config.py  models.py  operations.py
python/hubcli_worker/tasks/windows/: screenshot.py
src/: cli.js  postinstall.js
src/core/: command-registry.js  execute-command.js  paths.js  payload-utils.js  (+3 more)
test/: http-command.test.js
(+44 files in other folders)
